[package]
name = "luajit"
version = "0.1.0"
authors = ["Dreae <dreae@dreae.onl>"]
build = "build.rs"
description = "Rust crate for calling LuaJIT from Rust"
documentation = "https://dreae.gitlab.io/luajit-rs/luajit/"
repository = "https://gitlab.com/Dreae/luajit-rs"
readme = "README.md"
keywords = ["luajit", "lua"]
category = ["external-ffi-bindings", "embedded", "api-bindings"]
license = "MIT"

[dependencies]
libc = "0.2.32"
