[package]
name = "lua-ffi"
version = "0.1.1"
authors = ["Dreae <dreae@dreae.onl>"]
build = "build.rs"
description = "Rust crate for calling Lua from Rust"
documentation = "https://dreae.gitlab.io/luajit-rs/luajit/"
repository = "https://gitlab.com/doukutsu-rs/lua-ffi"
readme = "README.md"
keywords = ["luajit", "lua"]
category = ["external-ffi-bindings", "embedded", "api-bindings"]
license = "MIT"

[dependencies]
libc = "0.2.32"

[build-dependencies]
lua-src = "542.0.0"
